# Model-Context-Protocol

./: runningCommands.md
Local Servers/browser-history-mcp/: README.md  main.py  pyproject.toml
Local Servers/browser-history-mcp/browser_history_mcp/: __init__.py
Local Servers/expence-tracker-mcp-server/: expenses.db  main.py  pyproject.toml
Local Servers/linkedin-mcp-server/: README.md
mcp-client/: .env  client1.py  pyproject.toml
mcp-server/: main.py  pyproject.toml
proxy-server/: main.py  pyproject.toml
