[project]
name = "browser-history-mcp"
version = "0.1.0"
description = "MCP server providing searchable access to local browser history and bookmarks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["browser_history_mcp"]
